# k-dense-byok

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.litellm  README.md  compose.yml  docker-entrypoint.backend.sh  docker-entrypoint.litellm.sh  initialize_kdense_workspace.sh  litellm_config.yaml  prep_sandbox.py  pyproject.toml  railway.toml  server.py  start.bat  start.ps1  start.sh  start_kdense_backend.sh  start_railway.sh  stop_kdense_backend.sh
.github/workflows/: docker-images.yml  vscode-extension.yml
docs/: architecture.md  custom-mcp-servers.md  docker-deployment.md  limitations.md
kady_agent/: agent.py  cost_ledger.py  env.example  gemini_settings.py  manifest.py  mcps.py  projects.py  runtime_paths.py  utils.py  win_compat.py
kady_agent/instructions/: main_agent.md
kady_agent/tools/: __init__.py  gemini_cli.py  venice.py
tests/: conftest.py  test_agent_callbacks.py  test_anndata_preview.py  test_chrome_profiles.py  test_citations.py  test_cost_ledger.py  test_gemini_cli.py  test_gemini_cli_tool.py  test_gemini_settings.py  test_litellm_callbacks.py  test_manifest.py  test_mcps.py  test_prep_sandbox.py  test_project_session_service.py  test_projects.py  test_replay.py  test_server.py  test_server_integration.py  test_utils.py
vscode-extension/: README.md  eslint.config.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json  tsconfig.test.json
web/: next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/src/app/: page.tsx
(+82 files in other folders)
