[project]
name = "kady"
version = "0.3.1"
description = "Kady — K-Dense BYOK Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.10",
    "fastapi>=0.133.1",
    "google-adk[extensions]>=1.31.0",
    "graphifyy>=0.4.21",
    "h5py>=3.16.0",
    "litellm[proxy]>=1.83.10",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
    "modal>=1.4.2",
    "openrouter>=0.7.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
kady-pdf-annotations-mcp = "kady_agent.mcp_servers.pdf_annotations:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "freezegun>=1.5.1",
    "anyio>=4.6.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: end-to-end FastAPI / multi-module tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["kady_agent", "server", "litellm_callbacks", "prep_sandbox"]
omit = [
    "kady_agent/mcp_servers/*",
    "kady_agent/_version.py",
]
branch = false

[tool.coverage.report]
skip_empty = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
